--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,29 @@
 <div>
-    <form #loginForm="ngForm" class="p-5 mt-5" (ngSubmit)="onSubmit(loginForm.value)">
-        <div class="form-group">
-            <input #email="ngModel" type="email" name="email" required email class="form-control col-md-6 col-lg-6" placeholder="email" ngModel>
-            <span *ngIf="email.errors?.required && email.touched" class="error">
-                Email field is required
-            </span>
-            <span *ngIf="email.errors?.email && email.touched" class="error">
-                Email is invalid
-            </span>
+    <form #loginForm="ngForm" class="shadow p-5 mt-5 col-md-6 col-lg-6 offset-md-3 offset-lg-3" (ngSubmit)="onSubmit(loginForm.value)">
+        <p class="font-weight-bold">Kituorder Login</p>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"></i></span>
+            </div>
+            <input #email="ngModel" type="email" name="email" required email class="form-control" placeholder="email" ngModel>
         </div>
-        <div class="form-group">
-            <input #password="ngModel" type="password" name="password" required minlength="8" class="form-control col-md-6 col-lg-6" placeholder="password" ngModel>
-            <span *ngIf="password.errors?.required && password.touched" class="error">Password is required</span>
-            <span *ngIf="password.errors?.minlength && password.touched" class="error">Password must be atleast 8 characters</span>
+        <span *ngIf="email.errors?.required && email.touched" class="error">
+            Email field is required
+        </span>
+        <span *ngIf="email.errors?.email && email.touched" class="error">
+            Email is invalid
+        </span>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-key"></i></span>
+              </div>
+            <input #password="ngModel" type="password" name="password" required minlength="8" class="form-control" placeholder="password" ngModel>
         </div>
-        <button type="submit" class="btn btn-primary"><i class="fa fa-sign-in"></i>PROCEED TO DASHBOARD</button>
+        <span *ngIf="password.errors?.required && password.touched" class="error">Password is required</span>
+        <span *ngIf="password.errors?.minlength && password.touched" class="error">Password must be atleast 8 characters</span>
+        <br>
+        <button type="submit" class="btn btn-secondary text-center"><i class="fa fa-sign-in"></i> PROCEED</button>
+        <br>
+        <a href="/register" class="text-danger font-weight-bold">No account?</a>
     </form>
 </div>
