--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,29 +1,35 @@
 <div class="container-fluid">
-    <form #registrationForm="ngForm" (ngSubmit)="onSubmit(registrationForm.value)" class="shadow p-5 mt-5 col-md-6 col-lg-6 offset-md-3 offset-lg-3">
-        <p class="font-weight-bold">Kituorder User Registration</p>
-        <div class="form-group">
-            <label class="font-weight-bold">Email</label>
-            <input required email type="email" #email="ngModel" name="email" ngModel class="form-control">
-            <span *ngIf="email.errors?.required && email.touched" class="error">
-                Email field is required
-            </span>
-            <span *ngIf="email.errors?.email && email.touched" class="error">
-                Email is invalid
-            </span>
+    <form #registrationForm="ngForm" (ngSubmit)="onSubmit(registrationForm.value)" class="shadow p-5 mt-2 col-md-6 col-lg-6 offset-md-3 offset-lg-3 bg-transparent">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"></i></span>
+            </div>
+            <input required email type="email" #email="ngModel" placeholder="Email" name="email" ngModel class="form-control p-4 rounded-0">
         </div>
+        <span *ngIf="email.errors?.required && email.touched" class="error">
+            Email field is required
+        </span>
+        <span *ngIf="email.errors?.email && email.touched" class="error">
+            Email is invalid
+        </span>
 
-        <div class="form-group">
-            <label class="font-weight-bold">Phone</label>
-            <input #phone="ngModel" required type="tel" name="phone" ngModel class="form-control">
-            <span *ngIf="phone.invalid && phone.touched" class="error">Phone number is required</span>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-address-book"></i></span>
+            </div>
+            <input #phone="ngModel" required minlength="10" type="tel" name="phone" ngModel placeholder="Phone" class="form-control p-4 rounded-0">
         </div>
-        <div class="form-group">
-            <label class="font-weight-bold">Password</label>
-            <input #password="ngModel" minlength="8" required type="password" name="password" ngModel class="form-control">
-            <span *ngIf="password.errors?.required && password.touched" class="error">Password is required</span>
-            <span *ngIf="password.errors?.minlength && password.touched" class="error">Password must be atleast 8 characters</span>
-            
+        <span *ngIf="phone.errors?.required && phone.touched" class="error">Phone number is required</span>
+        <span *ngIf="phone.errors?.minlength && phone.touched" class="error">Phone must be 10 characters</span>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-key"></i></span>
+            </div>
+            <input #password="ngModel" minlength="8" required type="password" placeholder="Password" name="password" ngModel class="form-control p-4 rounded-0">
         </div>
+        <span *ngIf="password.errors?.required && password.touched" class="error">Password is required</span>
+        <span *ngIf="password.errors?.minlength && password.touched" class="error">Password must be atleast 8 characters</span>
+        <br>
         <button type="submit" [disabled]="!registrationForm.valid" class="btn btn-secondary"><i class="fa fa-user-plus"></i>JOIN KITUORDER</button>
     </form>
 </div>
